--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Predict denomination of <strong>INR</strong> and <strong>USD</strong> notes</div>
+    <div class='title'>Predict denomination of <strong>INR</strong> notes</div>
     <p>
-      Use images of <strong>INR</strong>, <strong>USD</strong> or
-      both!
+      Use images of <strong>INR</strong>
     </p>
     <p>
       For test use by students of <strong>R.V College of Engineering</strong>, <strong>not for production use!</strong>
@@ -39,9 +38,6 @@
       <div class='result-label'>
         <label id='result-label'></label>
       </div>
-      <p>
-      If you have any suggestions or queries feel, free to contact us.
-    </p>
     </div>
   </div>
 </div>
